Issue #28376: The constructor of range_iterator now checks that step is not 0. Patch by Oren Milman.